src/objects/Projects__c.object
<CustomObject>
    <fields>
        <fullName>About_Client__c</fullName>
        <label>About Client</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <label>Client Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confidential__c</fullName>
        <label>Confidential</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Secret</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discipline_Detils__c</fullName>
        <label>Discipline Phase</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Discipline__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Business Modelling</fullName>
                </value>
                <value>
                    <fullName>Requirement</fullName>
                </value>
                <value>
                    <fullName>Analysis &amp; Design</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
                <value>
                    <fullName>Deployment</fullName>
                </value>
                <value>
                    <fullName>Configuration &amp; Change Management</fullName>
                </value>
                <value>
                    <fullName>Project Management</fullName>
                </value>
                <value>
                    <fullName>Environment</fullName>
                </value>
                <value>
                    <fullName>Operations &amp; Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discipline__c</fullName>
        <label>Discipline</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration_In_Business_Days__c</fullName>
        <formula>IF(!(ISNULL(Planned_Start_Date__c) &amp;&amp; !(ISNULL(Planned_End_Date__c))) ,
((Planned_End_Date__c) - ( Planned_Start_Date__c )) -
( FLOOR ( ( ( ((Planned_End_Date__c)) - (Planned_Start_Date__c)) / 7 ) ) * 2 ) +
CASE(MOD ( (Planned_Start_Date__c) - DATE( 1900,1,6 ),7),
0,CASE( MOD (((Planned_End_Date__c)) - DATE( 1900,1,6 ),7),0,1,2 ),
1,CASE( MOD (((Planned_End_Date__c)) - DATE( 1900,1,6 ),7),0,2,1 ),
IF(MOD((Planned_Start_Date__c) - DATE( 1900,1,6 ),7) - MOD(((Planned_End_Date__c)) - DATE( 1900,1,6 ),7) &lt;= 0 ,0,
IF(MOD(((Planned_End_Date__c)) - DATE( 1900,1,6 ),7) = 0,1,-2 ) ) )
,
((TODAY()) - ( Planned_Start_Date__c )) -
( FLOOR ( ( ( (TODAY()) - (Planned_Start_Date__c)) / 7 ) ) * 2 ) +
CASE(MOD ( (Planned_Start_Date__c) - DATE( 1900,1,6 ),7),
0,CASE( MOD ((TODAY()) - DATE( 1900,1,6 ),7),0,1,2 ),
1,CASE( MOD ((TODAY()) - DATE( 1900,1,6 ),7),0,2,1 ),
IF(MOD((Planned_Start_Date__c) - DATE( 1900,1,6 ),7) - MOD((TODAY()) - DATE( 1900,1,6 ),7) &lt;= 0 ,0,
IF(MOD((TODAY()) - DATE( 1900,1,6 ),7) = 0,1,-2 ) ) )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (In Business Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Functional_Scope__c</fullName>
        <label>Functional Scope</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Methodology__c</fullName>
        <label>Methodology</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agile</fullName>
                </value>
                <value>
                    <fullName>Waterfall</fullName>
                </value>
                <value>
                    <fullName>Iterative and incremental</fullName>
                </value>
                <value>
                    <fullName>Spiral</fullName>
                </value>
                <value>
                    <fullName>V-Model</fullName>
                </value>
                <value>
                    <fullName>Big Bang</fullName>
                </value>
                <value>
                    <fullName>Magic Box</fullName>
                </value>
                <value>
                    <fullName>Prototype</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <inlineHelpText>Project Scope if Other</inlineHelpText>
        <label>Other</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_End_Date__c</fullName>
        <label>Planned End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Start_Date__c</fullName>
        <label>Planned Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Scope__c</fullName>
        <label>Project Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requirements Gathering</fullName>
                </value>
                <value>
                    <fullName>Process Definition</fullName>
                </value>
                <value>
                    <fullName>Application Design</fullName>
                </value>
                <value>
                    <fullName>Training Design and Development</fullName>
                </value>
                <value>
                    <fullName>Build: Configuration</fullName>
                </value>
                <value>
                    <fullName>Build: Customization</fullName>
                </value>
                <value>
                    <fullName>Build: Integration</fullName>
                </value>
                <value>
                    <fullName>Build: Data Migration/Conversion</fullName>
                </value>
                <value>
                    <fullName>Application Testing</fullName>
                </value>
                <value>
                    <fullName>Integration Testing</fullName>
                </value>
                <value>
                    <fullName>Deployment Planning</fullName>
                </value>
                <value>
                    <fullName>Deployment Execution</fullName>
                </value>
                <value>
                    <fullName>Deployment Support</fullName>
                </value>
                <value>
                    <fullName>User Acceptance Testing (UAT)</fullName>
                </value>
                <value>
                    <fullName>Training Delivery</fullName>
                </value>
                <value>
                    <fullName>Project Management</fullName>
                </value>
                <value>
                    <fullName>Strategy Definition</fullName>
                </value>
                <value>
                    <fullName>Ongoing Application Maintenance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Synopsis__c</fullName>
        <label>Synopsis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Work__c</fullName>
        <label>Type of Work</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RFP</fullName>
                </value>
                <value>
                    <fullName>RFQ</fullName>
                </value>
                <value>
                    <fullName>Solution</fullName>
                </value>
                <value>
                    <fullName>IT Infrastructure Library</fullName>
                </value>
                <value>
                    <fullName>Intellectual Property</fullName>
                </value>
                <value>
                    <fullName>IP Assessment</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Client_Name__c</columns>
        <columns>Confidential__c</columns>
        <columns>Planned_Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Type_of_Work__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>RFP / Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Others_Cannot_be_blank</fullName>
        <active>true</active>
        <description>Others_Cannot_be_blank when other is selected</description>
        <errorConditionFormula>AND( INCLUDES (  Project_Scope__c ,&apos;Other&apos;), ISBLANK( Other__c ))</errorConditionFormula>
        <errorDisplayField>Other__c</errorDisplayField>
        <errorMessage>Please explain the Project Scope</errorMessage>
    </validationRules>
</CustomObject>